--- a/emergency_dentist.html
+++ b/emergency_dentist.html
@@ -204,7 +204,7 @@
                     <!-- Headline -->
                     <h1
                         class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold text-gray-900 mb-3 sm:mb-4 leading-tight">
-                        Top Rated Emergency Dentist Available Now:<span class="text-[#b89185] block sm:inline"> Same-Day Appointments</span>
+                        Top Rated <br> Emergency Dentist Available Now: <br> <span class="text-[#b89185] block sm:inline"> Same-Day Appointments</span>
                     </h1>
 
                     <!-- Description -->
