--- a/emergency_dentist.html
+++ b/emergency_dentist.html
@@ -193,7 +193,7 @@
                 <div class="text-center lg:text-left order-1 lg:order-1">
                     <!-- Badge -->
                     <div
-                        class="inline-flex items-center bg-[#b89185]/15 border-2 border-[#b89185]/40 text-gray-800 px-3 sm:px-4 py-1.5 sm:py-2 rounded-full text-xs sm:text-sm font-semibold mb-4 sm:mb-6">
+                        class="inline-flex items-center bg-[#b89185]/15 border-2 border-[#b89185]/40 text-gray-800 px-2.5 sm:px-3 py-1 sm:py-1.5 rounded-full text-[10px] sm:text-xs font-semibold mt-2 sm:mt-3 mb-4 sm:mb-6">
                         <i class="fas fa-smile text-[#b89185] mr-2 text-xs sm:text-sm"></i>
                         <span class="hidden sm:inline"># Emergency Dentist in Cypress, TX                        </span>
                         <span class="sm:hidden">
