--- a/emergency_dentist.html
+++ b/emergency_dentist.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
         content="General Dentistry - Smile Town Dental Clinic. #1 Dentist Near Baguiati. Expert dental care with modern facilities.">
-    <title>General Dentistry – lp.soothesmilestudio.com</title>
+    <title>Emergency Dentistry – lp.soothesmilestudio.com</title>
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -272,15 +272,17 @@
 				</div>
                         <div class="grid grid-cols-2 gap-2 sm:gap-3 md:gap-4">
                             <div
-                                class="text-center p-2 sm:p-3 md:p-4 bg-gradient-to-br from-[#b89185]/10 to-[#b89185]/20 rounded-lg md:rounded-xl hover:from-[#b89185]/20 hover:to-[#b89185]/30 transition-all duration-300">
-                                <div class="text-xs sm:text-sm md:text-base font-bold text-gray-900 mb-1 leading-tight">
-                                    No insurance? No problem
+                                class="text-center p-3 sm:p-4 md:p-5 bg-gradient-to-br from-[#b89185]/10 to-[#b89185]/20 rounded-lg md:rounded-xl hover:from-[#b89185]/20 hover:to-[#b89185]/30 transition-all duration-300">
+                                <div class="font-bold text-gray-900 leading-tight">
+                                    <span class="text-sm sm:text-base md:text-lg lg:text-xl block mb-1">No insurance?</span>
+                                    <span class="text-[10px] sm:text-xs md:text-sm">No problem</span>
                                 </div>
 				</div>
                             <div
-                                class="text-center p-2 sm:p-3 md:p-4 bg-gradient-to-br from-[#b89185]/20 to-[#b89185]/35 rounded-lg md:rounded-xl hover:from-[#b89185]/35 hover:to-[#b89185]/45 transition-all duration-300">
-                                <div class="text-xs sm:text-sm md:text-base font-bold text-gray-900 mb-1 leading-tight">
-                                    No judgment dentistry
+                                class="text-center p-3 sm:p-4 md:p-5 bg-gradient-to-br from-[#b89185]/20 to-[#b89185]/35 rounded-lg md:rounded-xl hover:from-[#b89185]/35 hover:to-[#b89185]/45 transition-all duration-300">
+                                <div class="font-bold text-gray-900 leading-tight">
+                                    <span class="text-sm sm:text-base md:text-lg lg:text-xl block mb-1">No</span>
+                                    <span class="text-[10px] sm:text-xs md:text-sm">Judgment dentistry</span>
                                 </div>
 				</div>
 			</div>
@@ -320,7 +322,7 @@
                 </h2>
                 <p class="text-base sm:text-lg text-gray-700 text-center max-w-4xl mx-auto mb-8 sm:mb-10 md:mb-12 px-4">
                     From preventive care to complete smile treatments, we're dedicated to your long-term oral health. At
-                    Next Level Dental Studio, we ensure every visit feels supportive, smooth, and stress-free. Here are
+                    Soothe Smile Studio, we ensure every visit feels supportive, smooth, and stress-free. Here are
                     the reasons our patients keep coming back:
                 </p>
 
