--- a/emergency_dentist.html
+++ b/emergency_dentist.html
@@ -274,14 +274,14 @@
                             <div
                                 class="text-center p-3 sm:p-4 md:p-5 bg-gradient-to-br from-[#b89185]/10 to-[#b89185]/20 rounded-lg md:rounded-xl hover:from-[#b89185]/20 hover:to-[#b89185]/30 transition-all duration-300">
                                 <div class="font-bold text-gray-900 leading-tight">
-                                    <span class="text-sm sm:text-base md:text-lg lg:text-xl block mb-1">No insurance?</span>
+                                    <span class="text-sm sm:text-base md:text-lg lg:text-xl block mb-1 text-[#a37b67]">No insurance?</span>
                                     <span class="text-[10px] sm:text-xs md:text-sm">No problem</span>
                                 </div>
 				</div>
                             <div
                                 class="text-center p-3 sm:p-4 md:p-5 bg-gradient-to-br from-[#b89185]/20 to-[#b89185]/35 rounded-lg md:rounded-xl hover:from-[#b89185]/35 hover:to-[#b89185]/45 transition-all duration-300">
                                 <div class="font-bold text-gray-900 leading-tight">
-                                    <span class="text-sm sm:text-base md:text-lg lg:text-xl block mb-1">No</span>
+                                    <span class="text-sm sm:text-base md:text-lg lg:text-xl block mb-1 text-[#a37b67]">No</span>
                                     <span class="text-[10px] sm:text-xs md:text-sm">Judgment dentistry</span>
                                 </div>
 				</div>
@@ -555,7 +555,7 @@
                     <!-- Left Side: Google Rating Summary -->
                     <div
                         class="text-center max-w-md mx-auto md:max-w-none w-full mb-4 md:mb-0 flex flex-col justify-center">
-                        <h3 class="text-sm sm:text-base md:text-lg font-bold text-gray-900 mb-2 sm:mb-3">People love us
+                        <h3 class="text-xs sm:text-sm md:text-base font-bold text-gray-900 mb-2 sm:mb-3">People love us
                             on Google</h3>
                         <div class="flex items-center justify-center gap-0.5 sm:gap-1 mb-2 sm:mb-3">
                             <i class="fas fa-star text-yellow-400 text-base sm:text-lg md:text-xl"></i>
