--- a/emergency_dentist.html
+++ b/emergency_dentist.html
@@ -161,11 +161,10 @@
         <div class="md:hidden">
             <div class="container mx-auto px-4 py-2 relative">
                 <div class="flex items-center justify-between">
-                    <a href="https://lp.nextleveldentalhenderson.com/" rel="nofollow"
-                        class="flex items-center flex-shrink-0">
+                    <div class="flex items-center flex-shrink-0">
                         <img src="assect/logo.jpg"
                             alt="Soothe Smile Studio Logo" class="h-8 sm:h-9 w-auto max-w-[150px]">
-                    </a>
+                    </div>
                     <a href="tel:3465871716" aria-label="Call us" class="text-[#b89185] p-2 flex-shrink-0">
                         <i class="fas fa-phone text-lg"></i>
 	                        </a>
@@ -938,13 +937,13 @@
                     Flexible Financing</h2>
                 <div class="grid grid-cols-2 gap-3 sm:gap-4 md:gap-6 max-w-2xl mx-auto px-4">
                     <!-- Financing Logo 1 -->
-                    <div class="flex items-center justify-center h-28 md:h-36">
+                    <div class="flex items-center justify-center h-20 md:h-28">
                         <img src="assect/Financing- Logos/Financing_1-removebg-preview.png" alt="Financing"
                             class="h-full w-full object-contain grayscale">
                     </div>
                     <!-- Financing Logo 2 -->
-                    <div class="flex items-center justify-center h-20 md:h-24">
-                        <img src="assect/Financing- Logos/Financing_2-removebg-preview.png" alt="Financing"
+                    <div class="flex items-center justify-center h-20 md:h-28">
+                        <img src="assect/Financing- Logos/procedf.png" alt="Financing"
                             class="h-full w-full object-contain grayscale">
                     </div>
                 </div>
