--- a/emergency_dentist.html
+++ b/emergency_dentist.html
@@ -165,8 +165,8 @@
                         <img src="assect/logo.jpg"
                             alt="Soothe Smile Studio Logo" class="h-8 sm:h-9 w-auto max-w-[150px]">
                     </div>
-                    <a href="tel:3465871716" aria-label="Call us" class="text-[#b89185] p-2 flex-shrink-0">
-                        <i class="fas fa-phone text-lg"></i>
+                    <a href="tel:3465871716" aria-label="Call us" class="bg-[#b89185] text-white w-10 h-10 rounded-full flex items-center justify-center flex-shrink-0 hover:bg-[#9a7064] transition">
+                        <i class="fas fa-phone text-base"></i>
 	                        </a>
         </div>
         				</div>
@@ -580,9 +580,9 @@
                                     <div class="flex items-center gap-2.5 mb-2.5">
                                         <div
                                             class="w-10 h-10 lg:w-11 lg:h-11 rounded-full bg-[#b89185]/20 flex items-center justify-center text-[#b89185] font-bold text-sm flex-shrink-0">
-                                            IH</div>
+                                            SA</div>
                                         <div>
-                                            <p class="font-semibold text-gray-900 text-sm">I H</p>
+                                            <p class="font-semibold text-gray-900 text-sm">Sharon Alaimo</p>
                                             <p class="text-xs text-gray-500">November 7, 2025</p>
                                         </div>
                                     </div>
@@ -598,11 +598,7 @@
                                             <i class="fas fa-check text-white text-xs"></i>
                                         </div>
                                     </div>
-                                    <p class="text-sm text-gray-700 leading-relaxed line-clamp-5">"Great bedside manners
-                                        and with a friendly front office. Insurance screening is fast and not
-                                        complicated just bring your ID. Dr. Hernandez thank you for explaining every
-                                        step and for being an amazing dentist. Congratulations for building your own
-                                        private practice!"</p>
+                                    <p class="text-sm text-gray-700 leading-relaxed line-clamp-5">"This was my 1st appointment as a new patient with Dr. Louie at Soothe Smile Studio. It was the most comprehensive dental exam I have ever had. Everything was explained as it was happening and I was always included in the process"</p>
                                 </article>
 
                                 <!-- Review Card 2 -->
@@ -613,9 +609,9 @@
                                     <div class="flex items-center gap-2.5 mb-2.5">
                                         <div
                                             class="w-10 h-10 lg:w-11 lg:h-11 rounded-full bg-[#b89185]/20 flex items-center justify-center text-[#b89185] font-bold text-sm flex-shrink-0">
-                                            D4</div>
+                                            CD</div>
                                         <div>
-                                            <p class="font-semibold text-gray-900 text-sm">D 4</p>
+                                            <p class="font-semibold text-gray-900 text-sm">Chris Davis</p>
                                             <p class="text-xs text-gray-500">November 4, 2025</p>
                                         </div>
                                     </div>
@@ -631,9 +627,7 @@
                                             <i class="fas fa-check text-white text-xs"></i>
                                         </div>
                                     </div>
-                                    <p class="text-sm text-gray-700 leading-relaxed line-clamp-5">"Not only was this the
-                                        best dental office I've visited, it was by far the best doctor and customer
-                                        service! Didn't even feel the needle when doc numbed my gums! High recommend!"
+                                    <p class="text-sm text-gray-700 leading-relaxed line-clamp-5">"I had an AWESOME first experience at Soothe Smile Studio! Dr. Louie and the whole team are so personable and the office is very comfortable."
                                     </p>
                                 </article>
 
@@ -645,9 +639,9 @@
                                     <div class="flex items-center gap-2.5 mb-2.5">
                                         <div
                                             class="w-10 h-10 lg:w-11 lg:h-11 rounded-full bg-[#b89185]/20 flex items-center justify-center text-[#b89185] font-bold text-sm flex-shrink-0">
-                                            AR</div>
+                                            KB</div>
                                         <div>
-                                            <p class="font-semibold text-gray-900 text-sm">A R</p>
+                                            <p class="font-semibold text-gray-900 text-sm">Kaylie Brown</p>
                                             <p class="text-xs text-gray-500">October 31, 2025</p>
                                         </div>
                                     </div>
@@ -663,9 +657,7 @@
                                             <i class="fas fa-check text-white text-xs"></i>
                                         </div>
                                     </div>
-                                    <p class="text-sm text-gray-700 leading-relaxed line-clamp-5">"Dr Hernandez it's
-                                        absolutely amazing. He did my cleaning and my cavity all in one appointment. The
-                                        staff is very professional and really nice. I will say best dentist I ever had."
+                                    <p class="text-sm text-gray-700 leading-relaxed line-clamp-5">"With having a complex dental and gum health history, I've always found dental visits to be stressful. However, my experience here was exceptional. Dr. Louie was compassionate, professional, and very thorough."
                                     </p>
                                 </article>
 
@@ -677,10 +669,10 @@
                                     <div class="flex items-center gap-2.5 mb-2.5">
                                         <div
                                             class="w-10 h-10 lg:w-11 lg:h-11 rounded-full bg-[#b89185]/20 flex items-center justify-center text-[#b89185] font-bold text-sm flex-shrink-0">
-                                            CC</div>
+                                            AF</div>
                                         <div>
-                                            <p class="font-semibold text-gray-900 text-sm">C C</p>
-                                            <p class="text-xs text-gray-500">October 31, 2025</p>
+                                            <p class="font-semibold text-gray-900 text-sm">Ashley Fitzgerald</p>
+                                            <p class="text-xs text-gray-500">October 28, 2025</p>
                                         </div>
                                     </div>
                                     <div class="flex items-center gap-2 mb-2.5">
@@ -695,10 +687,7 @@
                                             <i class="fas fa-check text-white text-xs"></i>
                                         </div>
                                     </div>
-                                    <p class="text-sm text-gray-700 leading-relaxed line-clamp-5">"Hands down the most
-                                        personalized visit I have ever had! I learned so much about my oral health than
-                                        I have ever before. If you truly have dental concerns and need a jump start
-                                        towards the right direction, make an appointment with Next Level Dental Studio."
+                                    <p class="text-sm text-gray-700 leading-relaxed line-clamp-5">"I can't recommend Soothe Smile Studio with Dr. Louie and her team enough—I had a fantastic experience! From the moment I walked in, the staff made me feel welcomed and completely at ease."
                                     </p>
                                 </article>
 
@@ -710,9 +699,9 @@
                                     <div class="flex items-center gap-2.5 mb-2.5">
                                         <div
                                             class="w-10 h-10 lg:w-11 lg:h-11 rounded-full bg-[#b89185]/20 flex items-center justify-center text-[#b89185] font-bold text-sm flex-shrink-0">
-                                            MB</div>
+                                            KG</div>
                                         <div>
-                                            <p class="font-semibold text-gray-900 text-sm">M B</p>
+                                            <p class="font-semibold text-gray-900 text-sm">Kayla Guanajuato</p>
                                             <p class="text-xs text-gray-500">October 20, 2025</p>
                                         </div>
                                     </div>
@@ -728,14 +717,7 @@
                                             <i class="fas fa-check text-white text-xs"></i>
                                         </div>
                                     </div>
-                                    <p class="text-sm text-gray-700 leading-relaxed line-clamp-5">"This was my first
-                                        visit to Next Level Dental Studio and I felt very welcome. The office was
-                                        sparkling clean, and everyone was friendly too. I received an excellent cleaning
-                                        and my x-rays were painless. I was very grateful for the detailed explanation
-                                        that Dr. Hernandez gave me about the condition of my teeth. I will be returning
-                                        for some needed dental work and I am very confident that he will do the work
-                                        thoroughly and properly. It's good to know that a medical provider really cares
-                                        about your health."</p>
+                                    <p class="text-sm text-gray-700 leading-relaxed line-clamp-5">"10/10 experience and service! Dr. Louie and her team are absolutely the best. From the moment you walk in to the moment you leave, the entire staff makes sure you're comfortable and well cared for."</p>
                                 </article>
 
                                 <!-- Review Card 6 -->
@@ -746,9 +728,9 @@
                                     <div class="flex items-center gap-2.5 mb-2.5">
                                         <div
                                             class="w-10 h-10 lg:w-11 lg:h-11 rounded-full bg-[#b89185]/20 flex items-center justify-center text-[#b89185] font-bold text-sm flex-shrink-0">
-                                            KH</div>
+                                            CG</div>
                                         <div>
-                                            <p class="font-semibold text-gray-900 text-sm">K H</p>
+                                            <p class="font-semibold text-gray-900 text-sm">Connie Guerra</p>
                                             <p class="text-xs text-gray-500">October 14, 2025</p>
                                         </div>
                                     </div>
@@ -764,10 +746,7 @@
                                             <i class="fas fa-check text-white text-xs"></i>
                                         </div>
                                     </div>
-                                    <p class="text-sm text-gray-700 leading-relaxed line-clamp-5">"Had a great
-                                        experience with Dr. Hernandez and his team. They were very communicative and
-                                        made sure I was comfortable throughout the whole visit. I would highly recommend
-                                        Next Level Dental for your dental needs."</p>
+                                    <p class="text-sm text-gray-700 leading-relaxed line-clamp-5">"I've been searching for a new dentist closer to home, and I'm so glad I found Soothe! From the moment I walked in, the staff was warm and welcoming, and the office is so relaxing it immediately eased my dental anxiety."</p>
                                 </article>
                             </div>
                         </div>
@@ -1060,7 +1039,7 @@
             <div class="p-0 flex-1 flex flex-col overflow-hidden">
                 <div
                     class="w-full h-full rounded-none md:rounded-lg overflow-hidden border-0 md:border border-gray-200">
-                    <iframe id="appointment-iframe" src="https://nextleveldental.meetkasper.com/schedule-appointment"
+                    <iframe id="appointment-iframe" src="#"
                         class="w-full h-full border-0" frameborder="0" allowfullscreen>
                     </iframe>
                 </div>
