hero section modufy

--- a/emergency_dentist.html
+++ b/emergency_dentist.html
@@ -203,7 +203,7 @@
                     <!-- Headline -->
                     <h1
                         class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold text-gray-900 mb-3 sm:mb-4 leading-tight">
-                        Top Rated <br> Emergency Dentist Available Now: <br> <span class="text-[#b89185] block sm:inline"> Same-Day Appointments</span>
+                        Don’t Wait in Pain! <br>Same-Day Emergency Dentist <br> <span class="text-[#b89185] block sm:inline"> Available Now</span>
                     </h1>
 
                     <!-- Description -->
@@ -280,8 +280,8 @@
                             <div
                                 class="text-center p-3 sm:p-4 md:p-5 bg-gradient-to-br from-[#b89185]/20 to-[#b89185]/35 rounded-lg md:rounded-xl hover:from-[#b89185]/35 hover:to-[#b89185]/45 transition-all duration-300">
                                 <div class="font-bold text-gray-900 leading-tight">
-                                    <span class="text-sm sm:text-base md:text-lg lg:text-xl block mb-1 text-[#a37b67]">No</span>
-                                    <span class="text-[10px] sm:text-xs md:text-sm">Judgment dentistry</span>
+                                    <span class="text-sm sm:text-base md:text-lg lg:text-xl block mb-1 text-[#a37b67]">No Judgment</span>
+                                    <span class="text-[10px] sm:text-xs md:text-sm"> dentistry</span>
                                 </div>
 				</div>
 			</div>
