--- a/emergency_dentist.html
+++ b/emergency_dentist.html
@@ -203,7 +203,7 @@
                     <!-- Headline -->
                     <h1
                         class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl font-bold text-gray-900 mb-3 sm:mb-4 leading-tight">
-                        <span class="text-xl sm:text-2xl md:text-3xl lg:text-4xl">Don't Wait in Pain!</span> <br>Same-Day Emergency Dentist <br> <span class="text-[#b89185] block sm:inline"> Available Now</span>
+                        <span class="text-xl sm:text-2xl md:text-3xl lg:text-4xl">Don't Wait in Pain!</span> <br><span class="text-[#b89084]">Same-Day Emergency Dentist</span> <br> <span class="text-gray-800 block sm:inline"> Available Now</span>
                     </h1>
 
                     <!-- Description -->
