--- a/emergency_dentist.html
+++ b/emergency_dentist.html
@@ -1114,7 +1114,8 @@
     <!-- Inquiry Form Dialog Script -->
     <script>
         // Configuration - Update these values
-        const API_URL = 'https://dynamic-smtp-server.onrender.com/api/send-inquiry';
+        //const API_URL = 'https://dynamic-smtp-server.onrender.com/api/send-inquiry';
+        const API_URL = 'http://98.71.36.76:3000/api/send-inquiry';
         const LANDING_PAGE_ID = 'soothe-emergency-inquiry';
 
         const inquiryForm = document.getElementById('inquiryForm');
